# guardian-contributions-mcp

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ingest.yml
api/: index.py
deploy/: Dockerfile  docker-compose.yml
scripts/: diag_roe.py  spike_bulk.py  spike_pdf_chain.py
src/guardian_contrib/: __init__.py  config.py  db.py  models.py  money.py  reporting_calendar.py  roster.py  scheduler.py  service.py
src/guardian_contrib/api/: __init__.py  app.py
src/guardian_contrib/builder/: __init__.py  xlsx.py
src/guardian_contrib/compute/: __init__.py  combined.py  continuing.py  flags.py
src/guardian_contrib/ingest/: __init__.py  bulk.py  guardian_client.py  reports.py  runner.py
src/guardian_contrib/mcp_server/: __init__.py  server.py
src/guardian_contrib/web/: __init__.py  charts.py  format.py  routes.py
src/guardian_contrib/web/static/: app.js  ledger.css
src/guardian_contrib/web/templates/: base.html  candidate.html  dashboard.html  flags.html  search.html
tests/: conftest.py  test_api.py  test_builder.py  test_bulk_parser.py  test_charts.py  test_combined_and_flags.py  test_combined_identity.py  test_continuing.py  test_imports.py  test_ingest_run.py  test_live.py  test_mcp.py  test_money_calendar.py  test_pdf_parser.py  test_roster.py  test_web.py
tests/fixtures/: bulk_slice_2026.csv  combined_known_good_2026-06-15.csv
